@@ -26,7 +26,6 @@ sysconfdir=@sysconfdir@
 grub_prefix=`echo /boot/grub | sed ${transform}`
 grub_cfg=${grub_prefix}/grub.cfg
 update_grub_dir=${sysconfdir}/grub.d
-platform=@platform@
 
 grub_mkdevicemap=${sbindir}/`echo grub-mkdevicemap | sed ${transform}`
 grub_probe=${sbindir}/`echo grub-probe | sed ${transform}`
@@ -127,15 +126,15 @@ if test -f ${sysconfdir}/default/grub ; then
   . ${sysconfdir}/default/grub
 fi
 
-# if ${GRUB_TERMINAL} is set, check it has a sane value.  if undefined,
-# fallback to our default
-case ${platform}:${GRUB_TERMINAL} in
-  pc:)				GRUB_TERMINAL=gfxterm ;;
-  ieee1275:)			GRUB_TERMINAL=ofconsole ;;
-  *:)				GRUB_TERMINAL=console ;;
-  pc:console | pc:serial | ieee1275:ofconsole | ieee1275:console | *:gfxterm)
-				;;
-  *:*)				echo "Invalid terminal \"${GRUB_TERMINAL}\"" >&2 ; exit 1 ;;
+case x${GRUB_TERMINAL} in
+  x)
+    # If this platform supports gfxterm, try to use it.
+    if test -e ${grub_prefix}/gfxterm.mod ; then
+      GRUB_TERMINAL=gfxterm
+    fi
+  ;;
+  xconsole | xserial | xofconsole | xgfxterm) ;;
+  *) echo "Invalid terminal \"${GRUB_TERMINAL}\"" >&2 ; exit 1 ;;
 esac
 
 # check for terminals that require fonts
@@ -144,16 +143,16 @@ case ${GRUB_TERMINAL} in
     if path=`font_path` ; then
       GRUB_FONT_PATH="${path}"
     else
-      # fallback to console
-      GRUB_TERMINAL=console
+      # fallback to the native terminal for this platform
+      unset GRUB_TERMINAL
     fi
   ;;
 esac
 
 # does our terminal support utf-8 ?
-case ${platform}:${GRUB_TERMINAL} in
-  *:gfxterm) ;;
-  *:*)
+case ${GRUB_TERMINAL} in
+  gfxterm) ;;
+  *)
     # make sure all our children behave in conformance with ascii..
     export LANG=C
   ;;
