@@ -1,5 +1,11 @@
 2008-08-03  Robert Millan  <rmh@aybabtu.com>
 
+	* util/grub.d/00_header.in: Be platform-agnostic.  Probe for existence
+	of modules instead of assuming which platform provides what.
+	* util/update-grub.in: Likewise.
+
+2008-08-03  Robert Millan  <rmh@aybabtu.com>
+
 	* kern/i386/pc/init.c (make_install_device): Check for `grub_prefix'
 	instead of `grub_install_dos_part' to determine whether a drive needs
 	to be prepended to prefix (`grub_install_dos_part' is not reliable,
